# roasort

./: Cargo.toml
.github/workflows/: cicd.yml
src/: cli.rs  econtent.rs  ir.rs  lib.rs  main.rs
tests/: cli.rs
tests/data/: err.roa  err.txt  ok.roa  ok.txt
